--- a/Website_Reproducible-Data/_output.yml
+++ b/Website_Reproducible-Data/_output.yml
@@ -3,7 +3,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Greenhouse 2023 Salinity Experiment</a></li>
+        <li><a href="./">Reproducible Data Science Final Project</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
